--- a/index.html
+++ b/index.html
@@ -1,12 +1,19 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link href="style-2.css" type="text/css" rel="stylesheet">
+    <link href="resources/css/style-2.css" type="text/css" rel="stylesheet">
     <title>Excursion Travel Map</title>
   </head>
   <body>
     <h1>Discover hidden places in the world around you</h1>
-    <p>Download Excursion (Coming soon!)</p>
+      <p>Download Excursion (Coming soon!)</p>
+      <video autoplay loop src='./resources/excursion.mp4' type="video/mp4">Video not supported</video>
+    <h2>Your personal travel guide</h2>
+      <p>Excursion remembers places you like, and recommends new points of interest around you.</p>
+      <p><img src='./resources/camp.jpg'/></p>
+      <p><img src='./resources/phone.png'/></p>
+    <h2>Coming Soon for iPhone and Andriod<h2>
+      <p>Download Excursion (Coming soon!)</p>
 
   </body>
 </html>
